<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/driver_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/driver_map"
        android:icon="@drawable/ic_nav_map"
        android:title="@string/find_parking" />
    <item
        android:id="@+id/driver_bookings"
        android:icon="@drawable/ic_nav_bookings"
        android:title="@string/title_bookings" />
    <item
        android:id="@+id/driver_notifications"
        android:icon="@drawable/ic_nav_alerts"
        android:title="@string/notifications" />
    <item
        android:id="@+id/driver_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/title_profile" />
</menu>