<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/owner_dashboard"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/owner_dashboard" />
    <item
        android:id="@+id/owner_parking"
        android:icon="@drawable/ic_nav_map"
        android:title="@string/my_parking" />
    <item
        android:id="@+id/owner_bookings"
        android:icon="@drawable/ic_nav_bookings"
        android:title="@string/title_bookings" />
    <item
        android:id="@+id/owner_analytics"
        android:icon="@drawable/ic_nav_analytics"
        android:title="@string/analytics" />
    <item
        android:id="@+id/owner_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/title_profile" />
</menu>