<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.parkshare.frontend.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bookings"
        android:name="com.parkshare.frontend.fragments.BookingsFragment"
        android:label="@string/title_bookings"
        tools:layout="@layout/fragment_bookings" />

    <fragment
        android:id="@+id/navigation_sos"
        android:name="com.parkshare.frontend.fragments.SosFragment"
        android:label="@string/title_sos"
        tools:layout="@layout/fragment_sos" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.parkshare.frontend.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>